# rfasta

./: .gitignore  Cargo.toml  README.md  composition_titration_lt250.fasta  mkdocs.yml  pyproject.toml
.github/workflows/: CI.yml  docs.yml  rustdoc-pages.yml
api/latest/: help.html
api/latest/rfasta/: index.html
api/latest/rfasta/clean/: sidebar-items.js  struct.CleanOptions.html
api/latest/rfasta/errors/: enum.RfastaError.html
api/latest/rfasta/io/: fn.parse_fasta_file.html  fn.split_fasta_file_round_robin.html  fn.visit_fasta_file.html  struct.ParseOptions.html  struct.WriteOptions.html
api/latest/rfasta/parse/: fn.visit_fasta_reader.html  sidebar-items.js
api/latest/rfasta/sequence_processing/: struct.CleanOptions.html
api/latest/rfasta/shard/: fn.split_fasta_file_round_robin.html  sidebar-items.js
api/latest/rfasta/write/: sidebar-items.js  struct.WriteOptions.html
api/latest/search.index/: 08d3439d94ad.js  0c83813e828f.js  1a546ef4139f.js  327f9cc44822.js  6b356776b9ae.js  7446e2936599.js  root.js
api/latest/search.index/crateNames/: 06c4eeb3f987.js
api/latest/search.index/desc/: 70bbcba9e70d.js
api/latest/search.index/entry/: 5df0b53b1058.js
api/latest/search.index/path/: cad08cb07484.js
api/latest/search.index/type/: 72d581923746.js
api/latest/src/rfasta/: configs.rs.html  error.rs.html  parse.rs.html  write.rs.html
api/v0.1.1/: settings.html
api/v0.1.1/rfasta/: all.html
api/v0.1.1/rfasta/clean/: enum.DuplicateAction.html  enum.InvalidSequenceAction.html  index.html
api/v0.1.1/rfasta/io/: fn.visit_fasta_reader.html
api/v0.1.1/rfasta/parse/: index.html  struct.FastaRecord.html
api/v0.1.1/rfasta/shard/: index.html
api/v0.1.1/rfasta/write/: index.html
api/v0.1.1/search.index/: 12d76b3b9ee4.js  2baa3b4cfcae.js  47f12859216a.js  5009ca02e2d2.js  695625202cdd.js  71f60bb84cda.js
api/v0.1.1/search.index/function/: f36cbae8d144.js
api/v0.1.1/search.index/name/: 1850138a638a.js
api/v0.1.1/src/rfasta/: errors.rs.html  sequence_processing.rs.html
api/v0.1.2/: crates.js  src-files.js
api/v0.1.2/rfasta/: sidebar-items.js
api/v0.1.2/rfasta/clean/: fn.clean_sequences.html
api/v0.1.2/search.index/: 0acfc4640eb3.js  22e4473ac671.js  23675abff953.js  49e21eff95ad.js  4d08cb59706a.js  75fd089bb295.js
docs/: api-reference.md  cli.md  getting-started.md  index.md  large-fasta.md  python.md  rust.md
examples/: benchmark_driver.rs  library_overview.rs
src/: clean.rs  cli.rs  configs.rs  error.rs  errors.rs  io.rs  lib.rs  main.rs  parse.rs  sequence_processing.rs  shard.rs  utilities.rs  write.rs
src/python/: io.rs  mod.rs  utilities.rs
tests/: clean_behavior.rs  cli_behavior.rs  io_behavior.rs
tests/common/: mod.rs
(+41 files in other folders)
