[package]
name = "pfasta_rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli", "python"]  # Enable both by default
cli = ["clap"]
python = ["pyo3/extension-module"]

[lib]
name = "pfasta_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pfasta"
path = "src/bin/cli.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4.4", features = ["derive"], optional = true }
rand = "0.8"
pyo3 = { version = "0.19.0", features = ["abi3-py37"] }

[build-dependencies]
cc = "1.0.46"