[package]
name = "rfasta"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = []
python = ["pyo3/extension-module"]

[lib]
name = "rfasta"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
pyo3 = { version = "0.19.0", features = ["abi3-py37"] }

[build-dependencies]
cc = "1.0.46"