[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rfasta"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.scripts]
rfasta = "rfasta:cli_main"

[tool.maturin]
features = ["python", "cli"]  # Enable both features
module-name = "rfasta"
bindings = "pyo3"
# This tells maturin to include the binary
bin = ["rfasta"]
