[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rfasta"
description = "Rust-native toolkit for parsing, cleaning, writing, and sharding protein FASTA files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.scripts]
rfasta = "rfasta:cli_main"

[tool.maturin]
features = ["python-module", "cli"]
module-name = "rfasta"
bindings = "pyo3"
